[gd_scene load_steps=4 format=2]

[ext_resource path="res://title_screen/credits/credits_scene.gd" type="Script" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/cancel_shortcut.tres" type="ShortCut" id=3]

[node name="CreditsScreen" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_right = 760.0
margin_bottom = 26.0
text = "ui_credits"
align = 1

[node name="CreditsText" type="RichTextLabel" parent="."]
margin_top = 30.0
margin_right = 760.0
margin_bottom = 296.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[center]Thank you for playing[/center]"
text = "Thank you for playing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToTitleButton" type="Button" parent="."]
margin_left = 277.0
margin_top = 300.0
margin_right = 483.0
margin_bottom = 340.0
size_flags_horizontal = 4
shortcut_in_tooltip = false
shortcut = ExtResource( 3 )
text = "ui_back_to_title"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_CreditsScreen_visibility_changed"]
[connection signal="meta_clicked" from="CreditsText" to="." method="_on_CreditsText_meta_clicked"]
